[card][bug] fixed header from bleeding through on the corners (#48)

--- a/assets/styles/framework/_card.scss
+++ b/assets/styles/framework/_card.scss
@@ -14,6 +14,7 @@ $component-identifier: '.card';
     padding: 6px 10px;
     font-size: 1.6rem;
     font-weight: 600;
+    border-radius: ($border-radius-medium - 2) ($border-radius-medium - 2) 0 0;
   }
 
   &__header-arrow {
